# cdd209-final-template

./: LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  tutorial.ipynb
data/processed/: prescriptions_large_cleaned.csv
src/pharma_adherence/: cleaning.py  data.py  modeling.py  patient.py  visualization.py
